--- a/style/style.css
+++ b/style/style.css
@@ -12,9 +12,10 @@ body {
 
 .part {
     display: grid;
+    grid-template-columns: 1fr 1fr;
     width: 100%;
-    gap: 2vw;
-    grid-template-columns: repeat(auto-fill, minmax(40vw, 48vw));
+    grid-gap: 1vw;
+
 }
 
 .lesson {
